--- a/result-summary.css
+++ b/result-summary.css
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk');
 
+
 :root {
 /* primary colors */
 --light-red: 0, 100%, 67%;
 --orangey-yellow: 39, 100%, 56%;
 --green-teal: 166, 100%,37%;
 --cobalt-blue: 234, 85%, 45%;
+--alpha: 10%;
+--alpha-40: 40%;
 
 /* gradient */
 --light-slate-blue: hsl(252, 100%, 67%);
@@ -21,17 +24,7 @@
 
 /*font*/
 --hanken: "Hanken Grotesk", sans-serif;
-
---color: 240, 240, 240;
---alpha: 0.1;
-
 }
-
-/*
-Weights: 500, 700, 800
-Font size (paragraphs): 18px
-Use transparency to get the colour variations necessary to match the design. Hint: look into using `hsla()`.
-*/
 
 
 * {
@@ -53,12 +46,23 @@ main {
     height: 50%;
     border-radius: 20px;
     box-shadow:5px 5px 30px var(--pale-blue);
+    min-width: 600px;
 }
 
+
+h2 {
+    font-family: var(--hanken);
+    font-size: 20px;
+}
+
+h3 {
+    font-family: var(--hanken);
+    font-size: 30px;
+}
+/* left side */
 .left {
     width:50%;
     padding: 30px;
-    position: relative;
     background: linear-gradient(var(--light-slate-blue), var(--light-royal-blue));
     text-align: center;
     border-radius: 20px;
@@ -69,19 +73,18 @@ main {
     align-items: center;
 }
 
+.left h2 {
+    color: hsla(var(--white), var(--alpha-40));
+}
 
 .circle {
-    /*
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    */
     width: 200px;
     height: 200px;
-    border-radius: 100px;
+    border-radius: 50%;
     background: linear-gradient(var(--violet-blue), var(--persian-blue));
     display: flex;
     flex-direction: column;
+    margin: 30px 0 30px 0;
 }
 
 .score {
@@ -91,13 +94,24 @@ main {
 }
 
 .interval {
-    color: hsla(var(--white), var(--alpha));
-    
+    color: hsla(var(--white), var(--alpha)); 
 }
+
+.details {
+    display: block;
+    width: 80%;
+}
+
+/* right side */
 .right {
     width:50%;
     padding: 30px;
     border-radius: 20px;
+}
+
+.right h2{
+    margin-bottom: 30px;
+    color: var(--dark-gray-blue)
 }
 
 .square {
@@ -105,14 +119,10 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 40px;
+    height: 6vh;
     border-radius: 5px;
-    margin: 5px;
+    margin-bottom: 10px;
 }
-
-
-
-/* right "square" */
 
 .text-square  p{
     font-family: var(--hanken);
@@ -146,12 +156,113 @@ main {
     color: hsl(var(--cobalt-blue));
 }
 
+btn {
+    background-color: var(--dark-gray-blue);
+    border-radius: 10px;
+    color: white;
+    font-family: var(--hanken);
+    width: auto;
+    height: 6vh;
+    border-radius: 30px;
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+btn:hover{
+    background: linear-gradient(var(--light-slate-blue), var(--light-royal-blue));
+}
+
 span {
     padding: 20px;
     font-family: var(--hanken);
+    vertical-align: middle;
 }
 
-h2 {
-    font-family: var(--hanken);
-    font-size: 20px;
+span img {
+    vertical-align: middle;
+    margin-right: 5px;
+}
+
+.value {
+    color: var(--dark-gray-blue);
+    font-weight: 700;
+}
+
+.maximum {
+    color:  hsla(var(--cobalt-blue), var(--alpha));
+    font-weight: 700;
+}
+
+@media screen and (max-width: 550px) {
+
+    main {
+        width: 100%;
+        display:block;
+        margin: 0 auto;
+        max-height: 800px;
+    }
+    
+    .result {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        min-width:auto;
+        overflow: hidden;
+        height: 100%;
+        border-radius: 0;
+        box-shadow:none;
+        min-width: auto;
+    }
+
+    .left {
+        width:auto;
+        padding: 30px;
+        border-radius: 0 0 40px 40px;
+        color: hsl(var(--white));
+        font-family: var(--hanken);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-height: 50%;
+    }
+
+    .right {
+        width:auto;
+        padding: 30px;
+        border-radius: 0;
+        max-height: 40%;
+    }
+
+    .circle {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        background: linear-gradient(var(--violet-blue), var(--persian-blue));
+        display: flex;
+        flex-direction: column;
+        margin: 30px 0 30px 0;
+    }
+
+    .square {
+        width: auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 55px;
+        border-radius: 15px;
+        margin-bottom: 20px;
+    }
+
+    .score {
+        font-size: 80px;
+        padding-top: 10%;
+        font-weight: 800;
+    }
+    
+    btn {
+        height: 55px;
+    }
 }
